--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
  <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
-   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 2rem;">
+   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 2.5rem;">
     Your quick web designer and intuitive online marketer.
    </p>    
  </div>
@@ -59,47 +59,14 @@
             <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
             <h1><b>Web Design</b></h1>
          <p>
-            A great brand or business deserves a modern web page that will reach a greater audience out there. Robiweb Marketing will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
-          Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try Robiweb Marketing?
+            You deserve a modern web page that will reach a greater audience. Robiweb Marketing will develop a beautiful, fast and search engine optimised business website that will bring more potential clients to your doorstep.
+          Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Give me a try and you won't regret the investment.
              Check out the pricing.
         </p>
   <div class="card px-3">
       <div class="card-header text-white" style="background-color:#0B0B45;">
-        <b>Portfolio Websites</b>
-        </div>
-        <div class="card-body fs-5 text-white" style="background-color:#0B0B45;">
-          <ul>
-              <li>Social media integration</li>
-              <li>Content development</li>
-              <li>Contact-Form integration</li>
-              <li>Hosting & domain for the first one year</li>
-              <li>Publishing on Google Search Console</li>
-          </ul>
-        </div>
-        <div class="card-footer text-muted">
-          <b>KES 9999</b>
-        </div> 
-    <div class="card-header text-white" style="background-color:#0B0B45;">
-        <b>Branding Websites</b>
-        </div>
-        <div class="card-body fs-5 text-white" style="background-color:#0B0B45;">
-          <ul>
-              <li>Social media integration</li>
-              <li>Hosting & domain for the first one year</li>
-              <li>Content development</li>
-              <li>Contact-Form integration</li>
-              <li>Full Search Engine Optimization</li>
-              <li>Google Analytics integration</li>
-              <li>Publishing on Google Search Console</li>
-          </ul>
-        </div>
-        <div class="card-footer text-muted">
-          <b>KES 14999</b>
-        </div>
-        <div class="card-header text-white" style="background-color:#0B0B45;">
-            <b>Business Websites</b>
-            </div>
-            <div class="card-body fs-5 text-white" style="background-color:#0B0B45;">
+        <b>Features Included</b>
+        <div class="card-body fs-5 text-white" style="background-color:#0B0B45; font-size: 1rem;">
               <ul>
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
@@ -109,11 +76,8 @@
                   <li>MPESA/PayPal integration</li>
                   <li>Google Analytics integration</li>
                   <li>Publishing on Google Search Console</li>
-                  <li>Full Search Engine Optimization</li>
+                  <li>Basic Search Engine Optimization</li>
               </ul>
-            </div>
-            <div class="card-footer text-muted">
-              <b>KES 24999</b>
             </div>
            </div>
            <p class="py-2"  style="color:#0B0B45;"> 
@@ -126,7 +90,7 @@
         <section class="fluid-container justify-items-center py-2" id="contact">  
          <div class="container">
 <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
-         <ul style="list-type: none;">                       
+         <ul style="list-style-type: none;">                       
           <li><i class="fa fa-mobile" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
