--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav style="">
             <div class="container px-1">
-                  <h6 style="font-size: 2rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
+                  <h6 style="font-size: 2rem;"><span style="font-weight: 900; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
                  <a class="navbar-brand" href="#page-top" style="font-size: 2rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -66,7 +66,7 @@
   <div class="card px-3">
       <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Features Included</b>
-        <div class="card-body fs-5 text-white" style="background-color:#0B0B45; font-size: 1rem;">
+        <div class="card-body fs-5 text-white" style="background-color:#0B0B45; font-size: 0.5rem;">
               <ul>
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
@@ -80,6 +80,7 @@
               </ul>
             </div>
            </div>
+         <div class=" container ">      
            <p class="py-2"  style="color:#0B0B45;"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, Robiweb Marketing can handle that at your budget.
@@ -89,9 +90,9 @@
         </section>
         <section class="fluid-container justify-items-center py-2" id="contact">  
          <div class="container">
-<h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
+         <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-style-type: none;">                       
-          <li><i class="fa fa-mobile" style="font-size: x-large;"><b>+254718301634</b></i></li>
+          <li><i class="fa fa-mobile" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
             <div class="flex items-center min-h-screen container pxy-3" >
