--- a/index.html
+++ b/index.html
@@ -66,27 +66,26 @@
   <div class="card px-3">
       <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Features Included</b>
-        <div class="card-body fs-5 text-white" style="background-color:#0B0B45; font-size: 0.5rem;">
-              <ul>
+        <div class="card-body fs-5 text-white" style="background-color:#0B0B45; ">
+              <ul style="background-color:#0B0B45; font-size: 0.5rem;" >
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
                   <li>Content development</li>
                   <li>Contact-Form integration</li>
-                  <li>GoogleMyBusiness integration</li>
-                  <li>MPESA/PayPal integration</li>
+                  <li>Google My Business integration</li>
+                  <li>MPESA/ PayPal integration</li>
                   <li>Google Analytics integration</li>
                   <li>Publishing on Google Search Console</li>
                   <li>Basic Search Engine Optimization</li>
               </ul>
             </div>
            </div>
-         <div class=" container ">      
-           <p class="py-2"  style="color:#0B0B45;"> 
+         </div>            
+           <p class="py-2"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, Robiweb Marketing can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#contact" style="background-color:#0B0B45;"><b>Get A Quote</b></a>   
            </p>
-         </div>
         </section>
         <section class="fluid-container justify-items-center py-2" id="contact">  
          <div class="container">
