--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav style="">
             <div class="container px-1">
-                  <h6 style="font-size: 2rem;"><span style="font-weight: 900; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
+                  <h6 style="font-size: 1.5rem;"><span style="font-weight: 1000; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45; font-size: 1.5rem;"></i></span><span style="font-weight: 1000; font-size: 1.5rem; color: black;">bi</span><span style="font-weight: 1000; color: #0B0B45;">web</span></h6> 
                  <a class="navbar-brand" href="#page-top" style="font-size: 2rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -42,7 +42,7 @@
    </p>    
  </div>
             <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
-          <div style="display: block;">      
+          <div style="display: block;" class="bg-white py-5">      
             <a href="https://wa.me/254718301634"  style="font-size: 3rem; " style=" display: inline-block;"><i class="fa fa-whatsapp py-2"></i></a>                                                                                                                                                                                                                                                                                     
             <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 3rem; display: inline-block;"></i></a>
          </div>  
@@ -63,7 +63,7 @@
           Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Give me a try and you won't regret the investment.
              Check out the pricing.
         </p>
-  <div class="card px-3">
+  <div class="card px-3"  style="background-color:#0B0B45;">
       <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Features Included</b>
         <div class="card-body fs-5 text-white" style="background-color:#0B0B45; ">
@@ -91,8 +91,8 @@
          <div class="container">
          <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-style-type: none;">                       
-          <li><i class="fa fa-mobile" style="font-size: x-large;">  <b>+254718301634</b></i></li>
-          <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
+          <li><i class="fa fa-mobile" style="font-size: x-large;"> +254718301634</i></li>
+          <li><i class="fa fa-envelope" style="font-size: large;"> musilarobert93@gmail.com</i></li>
          </div>
             <div class="flex items-center min-h-screen container pxy-3" >
     <div class="container mx-auto">
