--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav style="">
             <div class="container px-1">
                   <h6 style="font-size: 1.5rem;"><span style="font-weight: 1000; color: black;">r</span><span><i class="fa fa-globe" style=" color: #0B0B45; font-size: 1.5rem;"></i></span><span style="font-weight: 1000; font-size: 1.5rem; color: black;">bi</span><span style="font-weight: 1000; color: #0B0B45;">web</span></h6> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 2rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -32,22 +31,23 @@
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
                     </ul>
                 </div>
+                 <a class="navbar-brand" href="#page-top" style="font-size: 2rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
             </div>
         </nav>
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
- <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
-   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 2.5rem;">
+ <div class="container-md text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
+   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
     Your quick web designer and intuitive online marketer.
    </p>    
  </div>
             <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
-          <div style="display: block;" class="bg-white px-5">      
+          <div style="display: block;" class="bg-white px-5 container-sm">      
             <a href="https://wa.me/254718301634"  style="font-size: 3rem; " style=" display: inline-block;"><i class="fa fa-whatsapp py-2"></i></a>                                                                                                                                                                                                                                                                                     
             <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 3rem; display: inline-block;"></i></a>
          </div>  
         <section class="fluid-container justify-items-center  py-2" id="about">
-         <div class="container">
+         <div class="container-md">
           <h2 style="color:#0B0B45;"><b>ABOUT ROBIWEB MARKETING</b></h2>   
           <p>
             Are you wondering why you get few or no clients for your business? Get more emails, calls or social media messages from potential clients. Robiweb marketing is an expert in designing fast websites as well as internet marketing campaigns. The idea is to make your portfolio, brand or business well known by your potential clients.
@@ -55,13 +55,12 @@
          </div>
        </section> 
         <section class="fluid-container justify-items-center py-2" id="services" >
-           <div class="container">
+           <div class="container-lg">
             <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
             <h1><b>Web Design</b></h1>
          <p>
             You deserve a modern web page that will reach a greater audience. Robiweb Marketing will develop a beautiful, fast and search engine optimised business website that will bring more potential clients to your doorstep.
           Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Give me a try and you won't regret the investment.
-             Check out the pricing.
         </p>
   <div class="card px-2"  style="background-color:#0B0B45;">
       <div class="card-header text-white" style="background-color:#0B0B45;">
@@ -81,21 +80,21 @@
             </div>
            </div>
          </div>            
-           <p class="py-2"> 
+           <p class="py-2 container-md"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, Robiweb Marketing can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#contact" style="background-color:#0B0B45;"><b>Get A Quote</b></a>   
            </p>
         </section>
         <section class="fluid-container justify-items-center py-2" id="contact">  
-         <div class="container">
+         <div class="container-md">
          <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-style-type: none;">                       
           <li><i class="fa fa-mobile" style="font-size: x-large;"> +254718301634</i></li>
           <li><i class="fa fa-envelope" style="font-size: large;"> musilarobert93@gmail.com</i></li>
          </div>
             <div class="flex items-center min-h-screen container pxy-3" >
-    <div class="container mx-auto">
+    <div class="container-md mx-auto">
       <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
         <div class="text-center py-2">
           <h1 class="my-3 text-3xl text-white">
@@ -142,7 +141,7 @@
        </section>                                                     
       <!-- Footer-->
             <div class="fluid-container py-2" style="color:#0B0B45;">
-                <b><p class="container text-center">Copyright &copy; Robiweb Marketing 2023</p></b>
+                <b><p class="container-sm text-center">Copyright &copy; Robiweb Marketing 2023</p></b>
             </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
