--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </nav>
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
- <div class="container-md text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
-   <p data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
+ <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
+   <p class="container-md data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
     Your quick web designer and intuitive online marketer.
    </p>    
  </div>
@@ -55,7 +55,7 @@
          </div>
        </section> 
         <section class="fluid-container justify-items-center py-2" id="services" >
-           <div class="container-lg">
+           <div class="container-md">
             <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
             <h1><b>Web Design</b></h1>
          <p>
@@ -94,7 +94,7 @@
           <li><i class="fa fa-envelope" style="font-size: large;"> musilarobert93@gmail.com</i></li>
          </div>
             <div class="flex items-center min-h-screen container pxy-3" >
-    <div class="container-md mx-auto">
+    <div class="container-sm mx-auto">
       <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
         <div class="text-center py-2">
           <h1 class="my-3 text-3xl text-white">
