--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     Your quick web designer and intuitive online marketer.
    </p>    
  </div>
-            <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
+            <a class="btn btn-lg container-sm justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
           <div style="display: block;" class="bg-white px-5 container-sm">      
             <a href="https://wa.me/254718301634"  style="font-size: 3rem; " style=" display: inline-block;"><i class="fa fa-whatsapp py-2"></i></a>                                                                                                                                                                                                                                                                                     
             <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 3rem; display: inline-block;"></i></a>
