--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
                     </ul>
                 </div>
-                 <a class="navbar-brand" href="#page-top"><b style="font-size: 2.5em;"><span style="color: black;">ROBIWEB</span><span style="color: #0B0B45;">MARKETING</span></b></a>
+                 <a class="navbar-brand" href="#page-top"><b style="font-size: 2rem;"><span style="color: black;">ROBIWEB</span><span style="color: #0B0B45;">MARKETING</span></b></a>
             </div>
         </nav>
         <!-- Header-->
