--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center py-2" >
+        <div class="fluid-container justify-items-center py-2" id="header">
  <div class="container text-center" style="color:#0B0B45; background-image: url(/robert.jpeg); background-repeat: no-repeat; background-position: center; opacity: 0.8; background-size: cover; font-size: xx-large;">
    <p class="container-md data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-in-left" style="font-size: 3rem;">
     Your quick web designer and intuitive online marketer.
@@ -66,7 +66,7 @@
       <div class="card-header text-white" style="background-color:#0B0B45;">
         <b>Features Included</b>
         <div class="card-body fs-5 text-white" style="background-color:#0B0B45; ">
-              <ul style="background-color:#0B0B45; font-size: 0.5rem;" >
+              <ul style="background-color:#0B0B45; font-size: 0.5rem;" id="advantages">
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
                   <li>Content development</li>
@@ -118,10 +118,7 @@
               <label for="email" class="block mb-2 text-sm text-white">Email Address</label>
               <input type="email" name="email" id="email" placeholder="domain@mail.com" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
-            <div class="mb-6">
-              <label for="phone" class="text-sm text-white">Phone Number</label>
-              <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
-            </div>
+            
             <div class="mb-6">
               <label for="message" class="block mb-2 text-sm text-white">Your Message</label>
   
@@ -141,7 +138,7 @@
        </section>                                                     
       <!-- Footer-->
             <div class="fluid-container py-2" style="color:#0B0B45;">
-                <b><p class="container-sm text-center">Copyright &copy; Robiweb Marketing 2023</p></b>
+                <b><p class="container-sm text-center" id="copyright">Copyright &copy; Robiweb Marketing 2023</p></b>
             </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
