--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <style>
+              @media screen (min-width: 1000px;) {
+           body {
+               margin-left: 30%;
+               margin-right: 30% 
+             } 
+           #about, #header, #copyright, #contact {
+            font-size: 2rem;
+           }
+           #services li {
+               font-size: 1.5rem;
+           }
+
+        } 
+        </style>
     </head>
     <body id="page-top" style="background-color:grey; font-family: monospace;">
         <!-- Navigation-->
