--- a/index.html
+++ b/index.html
@@ -18,19 +18,30 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <style>
-              @media screen (min-width: 1000px;) {
-           body {
-               margin-left: 30%;
-               margin-right: 30% 
-             } 
-           #about, #header, #copyright, #contact {
-            font-size: 2rem;
-           }
-           #services li {
-               font-size: 1.5rem;
-           }
-
-        } 
+            body {
+                   @media screen (min-width: 1000px;) { 
+                   #about, #header, #copyright, #contact {
+                                      font-size: 2rem;
+                                       margin-left: 30%;
+                                       margin-right: 30%; 
+                          }
+                    #services li {
+                                      font-size: 1.5rem;
+                                      margin-left: 30%;
+                                      margin-right: 30%; 
+                          }
+                    #service {
+                                     font-size: 2rem;
+                                     margin-left: 30%;
+                                     margin-right: 30%;  
+                        }
+                       btn {
+                           
+                                     font-size: 2rem;
+                                     margin-left: 30%;
+                                     margin-right: 30%;
+                       }
+                }                     
         </style>
     </head>
     <body id="page-top" style="background-color:grey; font-family: monospace;">
@@ -70,18 +81,18 @@
          </div>
        </section> 
         <section class="fluid-container justify-items-center py-2" id="services" >
-           <div class="container-md">
-            <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
-            <h1><b>Web Design</b></h1>
-         <p>
+           <div class="container">
+            <h2 style="color:#0B0B45;" id="service"><b>SERVICES</b></h2>
+            <h1 id="service"><b>Web Design</b></h1>
+         <p id="service">
             You deserve a modern web page that will reach a greater audience. Robiweb Marketing will develop a beautiful, fast and search engine optimised business website that will bring more potential clients to your doorstep.
           Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Give me a try and you won't regret the investment.
         </p>
   <div class="card px-2"  style="background-color:#0B0B45;">
       <div class="card-header text-white" style="background-color:#0B0B45;">
-        <b>Features Included</b>
+        <b id="service">Features Included</b>
         <div class="card-body fs-5 text-white" style="background-color:#0B0B45; ">
-              <ul style="background-color:#0B0B45; font-size: 0.5rem;" id="advantages">
+              <ul style="background-color:#0B0B45; font-size: 0.5rem;">
                   <li>Social media integration</li>
                   <li>Domain & hosting for the first year</li>
                   <li>Content development</li>
@@ -95,14 +106,14 @@
             </div>
            </div>
          </div>            
-           <p class="py-2 container-md"> 
+           <p class="py-2 container-md" id="service"> 
              <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, Robiweb Marketing can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#contact" style="background-color:#0B0B45;"><b>Get A Quote</b></a>   
            </p>
         </section>
         <section class="fluid-container justify-items-center py-2" id="contact">  
-         <div class="container-md">
+         <div class="container">
          <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-style-type: none;">                       
           <li><i class="fa fa-mobile" style="font-size: x-large;"> +254718301634</i></li>
