--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <style>
             body {
-                   @media screen (min-width: 1000px;) { 
+                   @media screen (min-width: 700px) { 
                    #about, #header, #copyright, #contact {
                                       font-size: 2rem;
                                        margin-left: 30%;
